# ChangeLog for dev-perl/prefork
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/prefork/ChangeLog,v 1.39 2010/01/10 20:01:31 grobian Exp $

  10 Jan 2010; Fabian Groffen <grobian@gentoo.org> prefork-1.04.ebuild:
  Transfer Prefix keywords

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -prefork-1.01.ebuild:
  Cleanup

  28 Oct 2009; Raúl Porcel <armin76@gentoo.org> prefork-1.04.ebuild:
  ia64 stable

  18 Oct 2009; Tobias Klausmann <klausman@gentoo.org> prefork-1.04.ebuild:
  Stable on alpha, bug #283969

  07 Oct 2009; Tiago Cunha <tcunha@gentoo.org> prefork-1.04.ebuild:
  stable sparc, bug 283969

  19 Sep 2009; nixnut <nixnut@gentoo.org> prefork-1.04.ebuild:
  ppc stable #283969

  18 Sep 2009; Torsten Veller <tove@gentoo.org> prefork-1.04.ebuild:
  Stable on amd64 (#283969)

  17 Sep 2009; Jeroen Roovers <jer@gentoo.org> prefork-1.04.ebuild:
  Stable for HPPA (bug #283969).

  10 Sep 2009; Christian Faulhammer <fauli@gentoo.org> prefork-1.04.ebuild:
  x86 stable, bug 283969

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -prefork-1.03.ebuild:
  Cleanup

*prefork-1.04 (22 Jul 2009)

  22 Jul 2009; Torsten Veller <tove@gentoo.org> +prefork-1.04.ebuild:
  Version bump

  03 Jun 2009; Torsten Veller <tove@gentoo.org> -prefork-1.02.ebuild:
  Cleanup

*prefork-1.03 (21 Apr 2009)

  21 Apr 2009; Torsten Veller <tove@gentoo.org> +prefork-1.03.ebuild:
  Version bump

  02 Aug 2008; Torsten Veller <tove@gentoo.org> -prefork-1.00.ebuild:
  Cleanup

*prefork-1.02 (02 Aug 2008)

  02 Aug 2008; Torsten Veller <tove@gentoo.org> +prefork-1.02.ebuild:
  Version bump

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> prefork-1.01.ebuild:
  alpha stable

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> prefork-1.01.ebuild:
  Stable on x86, bug #169152.

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org> prefork-1.01.ebuild:
  Marking ~mips, tested on swarm
