@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/prefork
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/prefork/ChangeLog,v 1.39 2010/01/10 20:01:31 grobian Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/prefork/ChangeLog,v 1.40 2011/08/27 16:50:23 tove Exp $
+
+*prefork-1.40.0 (27 Aug 2011)
+
+  27 Aug 2011; Torsten Veller <tove@gentoo.org> +prefork-1.40.0.ebuild:
+  Change version scheme
 
   10 Jan 2010; Fabian Groffen <grobian@gentoo.org> prefork-1.04.ebuild:
   Transfer Prefix keywords
